@@ -4,6 +4,11 @@ Pkgcore Release Notes
 See ChangeLog for full commit logs; this is summarized/major changes.
 
 
+* expand repository api slightly adding has_match; this is intended
+  as a simple boolean check if a repo has it.  It should *only* be
+  used for containment- if you need the results don't test then itermatch,
+  just itermatch.
+
 * add cpy implementation of PackageRestriction.match
 
 * for package.provided repositories, short circuit their itermatch/match
